--- a/products/templates/products/category_products.html
+++ b/products/templates/products/category_products.html
@@ -47,7 +47,7 @@
 
 
 			
-					<a  href="/product/{{ product.slug }}">
+					<a  href="{{ product.get_absolute_url }}">
 
 				
 						<img  src="{{ product.mainimage.url }}" alt="not found" class="img-fluid">
