--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -3,6 +3,8 @@
 {% load static %}
 {% load thumbnail %}
 {% block style %}
+{% load i18n %}
+
 
 
 
@@ -83,6 +85,8 @@
     
   
     {% include 'products/navbar.html' %}
+
+    
  
   
   <link rel="shortcut icon" href="/media/products/favicon.ico" type="image/x-icon»>
@@ -97,10 +101,12 @@
         </button>
           </div>
           {% endfor %}
+          
       </div>
     {% endif %}
   {% block content %}
   {% endblock %}
+  
   <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script> -->
   <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
@@ -121,6 +127,9 @@
 
 
 
+
+
+
 <br>
 
 
@@ -136,6 +145,8 @@
 
 <i class="fa fa-phone"></i>      +7(495) 740-38-93</p></h6></span>  
    
+<p class="text-center"><a href="/terms&conditions.html">условия и положения     &
+<a href="/privacy-policy.html">политика конфиденциальности</a></p>
 
 
 <p class="text-center">copyright © 2021 . all rights reserved.</p>
