--- a/products/templates/products/navbar.html
+++ b/products/templates/products/navbar.html
@@ -104,7 +104,9 @@
 <a class="nav-link active" 
 </li></a> 
          
-
+<li class="nav-item">
+  <a class="nav-link" href="/"></a>
+</li>
          
 
 
