--- a/products/templates/products/privacy-policy.html
+++ b/products/templates/products/privacy-policy.html
@@ -1,3 +1,7 @@
+{% load i18n %}
+
+
+
 <p>политика конфиденциальности</p>
 <p>Добро пожаловать в политику конфиденциальности 005 Принт. 
     <p>005 Принт уважает вашу частную жизнь и обязуется защищать ваши персональные данные.
