--- a/products/templates/products/products_details.html
+++ b/products/templates/products/products_details.html
@@ -4,6 +4,7 @@
 
 {% load static %}
 
+{% load i18n %}
 
 {% block content %}
 
@@ -33,10 +34,10 @@
 
 <center>
    {% if request.user.is_authenticated %}
-   <a href="{% url 'mainapp:cart' product.slug %}" class="btn  btn-lg  btn-success text-uppercase"> <i class="fas fa-shopping-cart"></i>  Заказать </a>
+   <a href="{% url 'mainapp:cart' product.slug %}" class="btn  btn-lg  btn-success text-uppercase"> <i class="fas fa-shopping-cart"></i> {% trans 'Заказать' %}  </a>
    {% else %}
    
-  <h6 class="card-title"><span class="text-muted"><p style="color:rgb(229, 152, 147)">пожалуйста, зарегистрируйтесь,чтобы мы смогли оформить заказ</p></span></a></h6>
+  <h6 class="card-title"><span class="text-muted"><p style="color:rgb(229, 152, 147)">{% trans 'пожалуйста, зарегистрируйтесь,чтобы мы смогли оформить заказ' %}</p></span></a></h6>
   
 
    {% endif %}
@@ -126,10 +127,10 @@
         <table class="table table-striped table-sm" id="my_products">  
             <thead>
                 <tr>
-                    <th>Размер</th>
-                    <th>Дата изготовления</th>
-                    <th>Тираж(шт.)</th>
-                    <th>Цена(руб.)</th>
+                    <th>{% trans 'Размер' %} </th>
+                    <th>{% trans 'Дата изготовления' %} </th>
+                    <th>{% trans 'Тираж(шт.)' %}</th>
+                    <th>{% trans 'Цена(руб.)' %}</th>
                     
                     
                 </tr>
@@ -202,13 +203,13 @@
            
            
         
-            <p><a href="javascript:flipflop('animals');">у вас слетает введенный тираж? </a></p> 
+            <p><a href="javascript:flipflop('animals');">{% trans 'у вас слетает введенный тираж? ' %}</a></p> 
            
             <ul id="animals" style="display: none;">
               <li><div id="browse_app">
 
-                
-                значение тиража не слетает, результат выводится на экран  в строке  зеленым цветом, а поле ввода обнуляется для следующего расчёта
+                {% trans ' значение тиража не слетает, результат выводится на экран  в строке  зеленым цветом, а поле ввода обнуляется для следующего расчёта' %}
+               
        
          </li>
 
@@ -223,8 +224,10 @@
               
                <ul id="an" style="display: none;">
                  <li><div id="browse_app">
-   
-                  Всё нормально, алгоритм ориентируется на min или max тиражи, то есть автоматически увеличивает тираж до минимального, или считает не больше максимального
+
+                    
+                    {% trans 'Всё нормально, алгоритм ориентируется на min или max тиражи, то есть автоматически увеличивает тираж до минимального, или считает не больше максимального ' %}
+                  
           
             </li>
    
