new data + google reg

--- a/products/templates/products/rest.html
+++ b/products/templates/products/rest.html
@@ -50,26 +50,25 @@
   </style>
 
 <ul id="menu">
-  
-  
+
     
-        <li><a href="/products_by_category/16/">визитные карточки</a></li>
-        <li><a href="/products_by_category/1/">коробки</a></li>
-        <li><a href="/products_by_category/26/">лента</a></li>
-        <li><a href="/products_by_category/11/">листовки</a></li>
-        <li><a href="/products_by_category/11/">меню</a></li>
-        <li><a href="/products_by_category/14/"> мобильные стенды</a></li>
-        <li><a href="/products_by_category/18/">наклейки</a></li>
-        <li><a href="/products_by_category/20/">пакеты</a></li>
-        <li><a href="/products_by_category/3/">папки</a></li>
-        <li><a href="/products_by_category/12/">постеры</a></li>
-        <li><a href="/products_by_category/29/">плейсметы</a></li> 
-        <li><a href="/products_by_category/17/">приглашения</a></li>
-        <li><a href="/products_by_category/14/">ролл апы</a></li>
-        <li><a href="/products_by_category/27/"> бумажные стаканчики</a></li>
-        <li><a href="/products_by_category/28/">тейблтенты</a></li>
-        <li><a href="/products_by_category/11/">флаеры</a></li>
-        <li><a href="/products_by_category/15/">этикетки</a></li>
+        <li><a href="/products_by_category/16/"> {% trans 'визитные карточки' %}</a></li>
+        <li><a href="/products_by_category/1/"> {% trans 'коробки' %}</a></li>
+        <li><a href="/products_by_category/26/"> {% trans 'лента' %}</a></li>
+        <li><a href="/products_by_category/11/"> {% trans 'листовки' %}</a></li>
+        <li><a href="/products_by_category/11/"> {% trans 'меню' %}</a></li>
+        <li><a href="/products_by_category/14/"> {% trans 'мобильные стенды' %} </a></li>
+        <li><a href="/products_by_category/18/"> {% trans 'наклейки' %}</a></li>
+        <li><a href="/products_by_category/20/"> {% trans 'пакеты' %}</a></li>
+        <li><a href="/products_by_category/3/"> {% trans 'папки' %}</a></li>
+        <li><a href="/products_by_category/12/"> {% trans 'постеры' %}</a></li>
+        <li><a href="/products_by_category/29/"> {% trans 'плейсметы' %}</a></li> 
+        <li><a href="/products_by_category/17/"> {% trans 'приглашения' %}</a></li>
+        <li><a href="/products_by_category/14/"> {% trans 'ролл апы' %}</a></li>
+        <li><a href="/products_by_category/27/">  {% trans 'бумажные стаканчики' %}</a></li>
+        <li><a href="/products_by_category/28/"> {% trans 'тейблтенты' %}</a></li>
+        <li><a href="/products_by_category/11/"> {% trans 'флаеры' %}</a></li>
+        <li><a href="/products_by_category/15/"> {% trans 'этикетки' %}</a></li>
   
 
   </ul>
@@ -85,10 +84,10 @@
        <div class="block2">  <div class="col-md-7 "><div class="top-cover center-block"></div><p class="top-name center-block text-center"> 
       
         <h5><p 
-        <br><p>•	 Вы  задаете нам вопросы,
-            <p>•	Мы вместе уточняем детали, сразу подбираем решение,
-                <p>•	На нашем сайте находим все интересующие вас полиграфические позиции,
-                    <p>•	Мгновенно определяем тираж, цену и сроки производства.      <br> <br>
+        <br><p>•	{% trans 'Вы  задаете нам вопросы,' %} 
+            <p>•{% trans 'Мы вместе уточняем детали, сразу подбираем решение, %} 	
+                <p>•	{% trans 'На нашем сайте находим все интересующие вас полиграфические позиции,' %} 
+                    <p>•	{% trans 'Мгновенно определяем тираж, цену и сроки производства. ' %}      <br> <br>
                     </div>
      </div>
     </div>
@@ -123,7 +122,7 @@
 {% endthumbnail %} 
 <center> <h5><p>•	Добавляем  в счет </center>
 
-  <h5><p style="color:rgb(229, 152, 147)">Мы вместе с вами найдем/разработаем лучшие полиграфические решения для вашего ресторана или кафе, а после полностью автоматизируем процесс  повторного заказа, при лучшем соотношении цена/качество</p></h4>
+  <h5><p style="color:rgb(229, 152, 147)">	{% trans 'Мы вместе с вами найдем/разработаем лучшие полиграфические решения для вашего ресторана или кафе, а после полностью автоматизируем процесс  повторного заказа, при лучшем соотношении цена/качество' %} </p></h4>
 
 </div></div>
 
