--- a/products/templates/products/rest.html
+++ b/products/templates/products/rest.html
@@ -54,7 +54,7 @@
     
         <li><a href="/products_by_category/16/"> {% trans 'визитные карточки' %}</a></li>
         <li><a href="/products_by_category/1/"> {% trans 'коробки' %}</a></li>
-        <li><a href="/products_by_category/26/"> {% trans 'лента' %}</a></li>
+        <li><a href="/products_by_category/22/"> {% trans 'лента' %}</a></li>
         <li><a href="/products_by_category/11/"> {% trans 'листовки' %}</a></li>
         <li><a href="/products_by_category/11/"> {% trans 'меню' %}</a></li>
         <li><a href="/products_by_category/14/"> {% trans 'мобильные стенды' %} </a></li>
@@ -65,8 +65,8 @@
         <li><a href="/products_by_category/29/"> {% trans 'плейсметы' %}</a></li> 
         <li><a href="/products_by_category/17/"> {% trans 'приглашения' %}</a></li>
         <li><a href="/products_by_category/14/"> {% trans 'ролл апы' %}</a></li>
-        <li><a href="/products_by_category/27/">  {% trans 'бумажные стаканчики' %}</a></li>
-        <li><a href="/products_by_category/28/"> {% trans 'тейблтенты' %}</a></li>
+        <li><a href="/products_by_category/23/">  {% trans 'бумажные стаканчики' %}</a></li>
+        <li><a href="/products_by_category/24/"> {% trans 'тейблтенты' %}</a></li>
         <li><a href="/products_by_category/11/"> {% trans 'флаеры' %}</a></li>
         <li><a href="/products_by_category/15/"> {% trans 'этикетки' %}</a></li>
   
@@ -82,12 +82,12 @@
  
      <div class="col-lg-8 col-md-6 col-sm-12 col-xs-12">
        <div class="block2">  <div class="col-md-7 "><div class="top-cover center-block"></div><p class="top-name center-block text-center"> 
-      
+
         <h5><p 
-        <br><p>•	{% trans 'Вы  задаете нам вопросы,' %} 
-            <p>•{% trans 'Мы вместе уточняем детали, сразу подбираем решение, %} 	
-                <p>•	{% trans 'На нашем сайте находим все интересующие вас полиграфические позиции,' %} 
-                    <p>•	{% trans 'Мгновенно определяем тираж, цену и сроки производства. ' %}      <br> <br>
+        <br><p>•{% 	trans 'Вы  задаете нам вопросы,' %}
+            <p>•{% 	trans 'Мы вместе уточняем детали, сразу подбираем решение,' %}	
+                <p>•	{% 	trans 'На нашем сайте находим все интересующие вас полиграфические позиции,' %}
+                    <p>•	  {% 	trans 'Мгновенно определяем тираж, цену и сроки производства.' %}    <br> <br>
                     </div>
      </div>
     </div>
@@ -109,7 +109,7 @@
 
 
  
-<center> <h5><p>•	Считаем </center>
+<center> <h5><p>•	{% 	trans 'Считаем' %}</center>
   {% endthumbnail %}
 
 
@@ -120,9 +120,9 @@
 <img src="/media/products/order.png" width="50%">
 
 {% endthumbnail %} 
-<center> <h5><p>•	Добавляем  в счет </center>
+<center> <h5><p>•{% 	trans 'Добавляем  в счет' %}	 </center>
 
-  <h5><p style="color:rgb(229, 152, 147)">	{% trans 'Мы вместе с вами найдем/разработаем лучшие полиграфические решения для вашего ресторана или кафе, а после полностью автоматизируем процесс  повторного заказа, при лучшем соотношении цена/качество' %} </p></h4>
+  <h5><p style="color:rgb(229, 152, 147)"> {% 	trans 'Мы вместе с вами найдем/разработаем лучшие полиграфические решения для вашего ресторана или кафе, а после полностью автоматизируем процесс  повторного заказа, при лучшем соотношении цена/качество' %}   </p></h4>
 
 </div></div>
 
