--- a/products/templates/products/privacy-policy.html
+++ b/products/templates/products/privacy-policy.html
@@ -34,3 +34,6 @@
 
 
                                             ' %}
+
+
+                                            <li><a href="/products_by_category/15/">{% trans 'вишенки' %}</a></li>
