--- a/products/templates/products/support.html
+++ b/products/templates/products/support.html
@@ -26,25 +26,15 @@
 <h1 class="text-center"> {% trans 'Поддержка и сопровождение на любом этапе' %}</h1> 
      <br>
       <div class="row">
+        {% trans 'Мы понимаем, что очень сложно найти тот вариант для себя, который понравится большего всего. Обладая 25-летнем опытом и самым широким спектром технических возможностей, мы готовы вместе с вами найти то единственное решение, которое подходит именно вам. А после того, как мы с вами 
+        создадим то, что будет вас радовать, мы внесем изображение изделия в нужный раздел калькулятора. И в следующий раз вам будем очень удобно рассчитать требуемый тираж и понять сроки изготовления. А возможно, получиться посмотреть на другие идеи и реализации и мгновенно прикинуть их стоимость. У нас вместе получится воспользоваться копилкой полиграфических решений.Просто свяжитесь с нами.'%}
+        {% trans 'Мы понимаем, что очень сложно найти тот вариант для себя, который понравится большего всего. Обладая 25-летнем опытом и самым широким спектром технических возможностей, мы готовы вместе с вами найти то единственное решение, которое подходит именно вам. А после того, как мы с вами 
+        создадим то, что будет вас радовать, мы внесем изображение изделия в нужный раздел калькулятора. И в следующий раз вам будем очень удобно рассчитать требуемый тираж и понять сроки изготовления. А возможно, получиться посмотреть на другие идеи и реализации и мгновенно прикинуть их стоимость. У нас вместе получится воспользоваться копилкой полиграфических решений.Просто свяжитесь с нами.' %} 
 
-
-        <h3><p class="text-left" > {% trans 'Мы понимаем, что очень сложно найти тот вариант для себя, который понравится большего всего. Обладая 25-летнем опытом и самым широким спектром технических возможностей, мы готовы вместе с вами найти то единственное решение, которое подходит именно вам. А после того, как мы с вами 
-          создадим то, что будет вас радовать, мы внесем изображение изделия в нужный раздел калькулятора. И в следующий раз вам будем очень удобно рассчитать требуемый тираж и понять сроки изготовления. А возможно, получиться посмотреть на другие идеи и реализации и мгновенно прикинуть их стоимость. У нас вместе получится воспользоваться копилкой полиграфических решений.Просто свяжитесь с нами.' %}
-          <br> <br> <br>
+        <h3><p class="text-left" > 
+ <br> <br> <br>
       
-<p style="color:rgb(36, 163, 60)" class="text-center" class="text-muted"> <a style="color:rgb(36, 163, 60)"href="mailto:info@005.ru"><i class="fa fa-envelope" aria-hidden="true"></i>info@005.ru </a> 
 
-  <a href="/">
- 
-      <img src="/media/products/logo_rose.png" width="97" height="65">
- 
-  </a>
-
-<i class="fa fa-phone"></i>      +7(495) 740-38-93</p></h6></span>  
-        <!-- <div class="card"> -->
-         <!-- <div class="card-img">
-          <img align="center" src="images/posts/polit.jpg" class="img-fluid">
-         </div> -->
     
         {% for product in filter.qs %}
       
